<resources>
    <string name="app_name">PurchaEz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
    <string name="to_buy">To buy</string>
    <string name="buying_record">Buying Record</string>
    <string name="offers">Offers</string>
    <string name="todo">TODO</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="about_icon">about icon</string>
    <string name="about_text">This app is designed for you to stop worrying about groceries\'
        list and making you get full advantage of your time. Besides, one of the most common
        issues when going to the grocery store is that you never know whether you are carrying
        exact change or not. Furthermore, sometimes its to late when you realize that some product
        you bought was actually cheaper in other places, but how would you know? All this problems
        are meant to be solved by using this app. So if you are reading this, ¡congratulations!
        You made the right move when hitting the download button. Don\'t forget to keep track of
        future updates and to give us not only the negative, but also the positive feedback.
        Remember that your opinions help us improve our app, and eventually helps you out creating
        a reasonable budget and saving you not only money, but also time. Follow us on our social
        media (Twitter, Facebook, Instagram) and stay tuned to further news and updates. Its great
        to have you on board! \nSincerely yours, \n    The PurchaEz Team. </string>
    <string name="profile">Profile</string>
    <string name="about_title">About</string>
    <string name="app_icon">App icon</string>
    <string name="new_product">New Product</string>
    <string name="offers_title">The best offers around you…</string>
    <string name="offer_twoPerOne">Obtén un 2x1 en tu siguiente compra de jabón líquido de manos.</string>
    <string name="offer_pizza">¡Compra un combo de dos pizzas y una soda de 3 litros a solo Q50.00!</string>
    <string name="offer_shoes">Obtén un descuento del 40% en tu próxima compra de zapatos.</string>
    <string name="offer_meat">¡Compra 2 libras de carne y llévate 1 gratis!</string>
    <string name="offer_pan">En tu siguiente compra de Q400.00 o más te regalamos un sartén</string>
    <string name="offer_electro">¿Quieres cambiar de electrodomésticos? ¡Consiguelos con 30% de descuento!</string>
    <string name="offer_vegetable">¿Buscando una alimentación sana? ¡Compra una libra de verduras y consigue la segunda a mitad de precio!</string>
    <string name="offer_party">¿Quieres fiesta? Obtén un 50% de descuento en artículos de fiesta (incluida la bebida)</string>
    <string name="offer_coffee">Con la compra de un bote de 300g de café, ¡llévate uno de 225g totalmente gratis!</string>
    <string name="offer_hotdog">¡Compra un paquete de 24 salchichas para hot dog y llevate un paquete de 10 gratis!</string>
    <string name="img_description">Imagen del fragmento oferta</string>
    <string name="share">Share</string>
    <string name="your_result">Your Result</string>
    <string name="your_market_list">Your Market List</string>
    <string name="add_product">Add Product</string>
    <string name="product_cost">Product Cost</string>
    <string name="product_name">Product\nName</string>
    <string name="product_ncost">Product\nCost</string>
    <string name="product_number">Product\nNumber</string>
    <string name="number_of_products">Number of Products</string>
    <string name="total_in_q">Total in Q:</string>

</resources>
