<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/offerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/offers_title"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/twoPerOne" />

            <Button
                android:id="@+id/buttonOfferOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="225dp"
                android:layout_marginTop="-125dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/offer_twoPerOne"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="30dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/pizza" />

            <Button
                android:id="@+id/buttonOfferOne2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="225dp"
                android:layout_marginTop="-125dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/roboto"
                android:text="@string/offer_pizza"
                android:textAlignment="center"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

